# OOP-game

./: Background.cpp  Background.h  BossGoalPost.cpp  BossGoalPost.h  CMakeLists.txt  Coin.cpp  Coin.h  CollisionVisitor.cpp  CollisionVisitor.h  DoubleCoinsVisitor.cpp  DoubleCoinsVisitor.h  Enemy.cpp  Enemy.h  Football.cpp  Football.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Goalpost.cpp  Goalpost.h  ImageCache.cpp  ImageCache.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Platform.cpp  Platform.h  Powerup.cpp  Powerup.h  ProjectApp.cpp  ProjectApp.h  README.md  Scoreboard.cpp  Scoreboard.h  (+8 more)
levels/: level0.xml  level1.xml  level2.xml  level3.xml  level_test.xml
tests/: LevelTest.cpp  LevelTest.h
